# TurboHiker

./: CMakeLists.txt  README.md  Random.cpp  Random.h  TurboHiker Design.docx  main.cpp  sharedLib.txt
Controller/: Controller.cpp  Controller.h  Game.cpp  Game.h  World.cpp  World.h
Controller/HikerController/: HikerController.cpp  HikerController.h  PlayerHikerController.cpp  PlayerHikerController.h  RacingHikerController.cpp  RacingHikerController.h
Controller/HikerController/ComputerHikerController/: AdversaryHikerController.cpp  AdversaryHikerController.h  ComputerHikerController.cpp  ComputerHikerController.h  RacingHikerController.cpp  RacingHikerController.h
Event/: Event.cpp  Event.h  GameEvent.cpp  GameEvent.h
Event/Base Classes/: HikerEvent.cpp  HikerEvent.h
Event/ControllerEvent/: ControllerEvent.cpp  ControllerEvent.h  HikerControllerEvent.cpp  HikerControllerEvent.h
Event/ModelEvent/: HikerModelEvent.cpp  HikerModelEvent.h  ModelEvent.cpp  ModelEvent.h  ModelHikerEvent.cpp  ModelHikerEvent.h
Event/ViewEvent/: HikerViewEvent.cpp  HikerViewEvent.h  ViewClickEvent.cpp  ViewClickEvent.h  ViewEvent.cpp  ViewEvent.h  ViewHikerEvent.cpp  ViewHikerEvent.h
GameController/: Controller.cpp  Controller.h
GameModel/: Game.cpp  Game.h  Lane.cpp  Lane.h  Model.cpp  Model.h  Scoring.h  World.cpp  World.h
GameView/: View.cpp  View.h
HighScores/: highScores.th
Model/: ClickEvent.cpp  ClickEvent.h  Event.cpp  Event.h  GameModel.cpp  GameModel.h  HikerModel.cpp  HikerModel.h  LaneModel.cpp  LaneModel.h  ObstacleModel.cpp  ObstacleModel.h  Scoring.cpp  WorldModel.cpp  WorldModel.h
Model/HikerModel/: AdversaryHikerModel.cpp  AdversaryHikerModel.h  HikerModel.cpp  HikerModel.h  Hitbox.cpp  Hitbox.h  PlayerHikerModel.cpp  PlayerHikerModel.h  RacingHikerModel.cpp  RacingHikerModel.h  StandingHikerModel.cpp  StandingHikerModel.h
Model/ScoringModel/: HikerScore.cpp  HikerScore.h  ScoringModel.cpp  ScoringModel.h
Observer Pattern/: Observable.cpp  Observable.h  Observer.cpp  Observer.h
TurboHikerFactory/: AbstractHiker.cpp  AbstractHiker.h  AbstractLane.cpp  AbstractLane.h  AbstractObstacle.cpp  AbstractObstacle.h  AbstractTurboHikerFactory.cpp  AbstractTurboHikerFactory.h  AbstractWorldComponent.cpp  AbstractWorldComponent.h  ModelFactory.cpp  ModelFactory.h  ViewFactory.cpp  ViewFactory.h
Utilities/: Random.cpp  Random.h  Transformation.cpp  Transformation.h
View/: GameView.cpp  GameView.h  HikerView.cpp  HikerView.h  LaneView.cpp  LaneView.h  ObstacleView.cpp  ObstacleView.h  ScoringView.cpp  ScoringView.h  WorldView.cpp  WorldView.h
View/HikerView/: AdversaryHikerView.cpp  AdversaryHikerView.h  HikerView.cpp  HikerView.h  PlayerHikerView.cpp  PlayerHikerView.h  RacingHikerView.cpp  RacingHikerView.h  StandingHikerView.cpp  StandingHikerView.h
ViewSFML/: GameViewSFML.cpp  GameViewSFML.h  HikerViewSFML.cpp  HikerViewSFML.h  LaneViewSFML.cpp  LaneViewSFML.h  ObstacleViewSFML.cpp  ObstacleViewSFML.h  ScoringViewSFML.cpp  ScoringViewSFML.h  ViewSFMLFactory.cpp  ViewSFMLFactory.h  WorldViewSFML.cpp  WorldViewSFML.h
ViewSFML/HikerViewSFML/: AdversaryHikerViewSFML.cpp  AdversaryHikerViewSFML.h  HikerViewSFML.cpp  HikerViewSFML.h  PlayerHikerViewSFML.cpp  PlayerHikerViewSFML.h  RacingHikerViewSFML.cpp  RacingHikerViewSFML.h  StandingHikerViewSFML.cpp  StandingHikerViewSFML.h
ViewSFML/ViewSFMLUtilities/: ArrowKeysState.cpp  ArrowKeysState.h  ShiftKeysPressed.cpp  ShiftKeysPressed.h
